<?xml version="1.0" encoding="utf-8" standalone="no"?>
<!--Generated by crowdin.net-->
<resources>
    <string name="about_application">About application</string>
    <string name="accuracy">Accuracy</string>
    <string name="altitude">Altitude</string>
    <string name="answer">Answer</string>
    <string name="author">Author</string>
    <string name="coauthor">Vector maps and other improvements</string>
    <string name="azimuth">Azimuth</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="declination">Declination</string>
    <string name="disable_location">Disable location</string>
    <string name="distance">Distance</string>
    <string name="do_you_really_want_to_delete_selected_items">Do you really want to delete selected items?</string>
    <string name="do_you_really_want_to_delete_x">Do you really want to delete \'%1$s\'?</string>
    <string name="do_you_really_want_to_exit">Do you really want to EXIT?</string>
    <string name="dont_ask">Don\'t ask</string>
    <string name="error">Error</string>
    <string name="failed">Failed</string>
    <string name="feet">Feet</string>
    <string name="filesystem_cannot_create_root">Cannot create Root directory, SDCard probably missing.\n\nInsert it into device and run again!</string>
    <string name="finished">Finished</string>
    <string name="gps">Location</string>
    <string name="gps_and_location">GPS and location</string>
    <string name="gps_disabled">Location disabled</string>
    <string name="gps_enabled">Location enabled</string>
    <string name="gps_fix">Last GPS fix</string>
    <string name="gps_not_enabled_show_system_settings">Location service not enabled. Would you like to show system settings?</string>
    <string name="gps_off">Location</string>
    <string name="gps_on">Location</string>
    <string name="choose_cartridge">Choose Cartridge</string>
    <string name="info">Information</string>
    <string name="invalid_cartridge">Invalid cartridge\n\n %s</string>
    <string name="invalid_value">Invalid value</string>
    <string name="inventory">Inventory</string>
    <string name="latitude">Latitude</string>
    <string name="libraries">Libraries</string>
    <string name="locations">Locations</string>
    <string name="longitude">Longitude</string>
    <string name="map">Map</string>
    <string name="metres">Metres</string>
    <string name="new_version_will_be_installed">New version will be installed!</string>
    <string name="no">No</string>
    <string name="no_description">No description</string>
    <string name="no_location_providers_available">No Location providers available!</string>
    <string name="no_satellites">No satellites</string>
    <string name="no_target">No target!</string>
    <string name="no_wherigo_cartridge_available">No Wherigo cartridge available.\nAdd cartridge file (*.gwc) into\n %1$s directory\n and start %2$s again!</string>
    <string name="not_enough_disk_space_x">Not enough free disk space on SDCard!\n(%1$s, free:%2$s)</string>
    <string name="ok">OK</string>
    <string name="pending">Pending</string>
    <string name="pitch">Pitch</string>
    <string name="point">Point</string>
    <string name="press_color_to_apply">Press color to apply</string>
    <string name="problem_with_internet_connection">Problem with Internet connection!</string>
    <string name="provider">Location provider</string>
    <string name="provider_network">Network</string>
    <string name="provider_gps">GPS</string>
    <string name="provider_passive">-</string>
    <string name="question">Question</string>
    <string name="resume_previous_cartridge">Load savegame?\n(If you choose No, the savegame will be deleted.)</string>
    <string name="roll">Roll</string>
    <string name="satellites">Satellites</string>
    <string name="save_game">Save</string>
    <string name="save_game_auto">Game saved automatically</string>
    <string name="save_game_before_exit">Save game before exit?</string>
    <string name="save_game_ok">Game saved</string>
    <string name="settings">Settings</string>
    <string name="speed">Speed</string>
    <string name="start">Start</string>
    <string name="tasks">Tasks</string>
    <string name="time_to_target">Time to target</string>
    <string name="unexpected_problem">Unexpected problem!\n\nPlease contact me with description of your problem.</string>
    <string name="version">Version</string>
    <string name="waypoints">Waypoints</string>
    <string name="web_page">Web page</string>
    <string name="working">Working...</string>
    <string name="yes">Yes</string>
    <string name="you_have_to_exit_app_force">You have to exit application!</string>
    <string name="you_have_to_restart_app_force">You have to restart application!</string>
    <string name="you_have_to_restart_app_recommended">It\'s recommended to restart application!</string>
    <string name="you_see">You see</string>
    <string name="compass">Compass</string>
    <string name="navigate">Navigate</string>
    
    <!-- MapsForge BEGIN -->
    <string-array name="preferences_scale_bar_unit_values">
		<item>Imperial</item>
		<item>Metric</item>
	</string-array>

	<string-array name="preferences_text_scale_values">
		<item>tiny</item>
		<item>small</item>
		<item>normal</item>
		<item>large</item>
		<item>huge</item>
	</string-array>

	<string name="application_name">AdvancedMapViewer</string>
<!-- 	<string name="cancel">Cancel</string> -->
<!-- 	<string name="error">Error</string> -->
	<string name="error_last_location_unknown">The last location is unknown</string>
	<string name="file_invalid">The selected file is invalid.</string>
	<string name="file_select">Please select a file.</string>
	<string name="file_size_byte">byte</string>
	<string name="file_size_bytes">bytes</string>
	<string name="file_size_kb">kB</string>
	<string name="file_size_mb">MB</string>
	<string name="file_size_gb">GB</string>
	<string name="go_to_position">Go to position</string>
	<string name="info_map_file_area">Area</string>
	<string name="info_map_file_comment">Comment</string>
	<string name="info_map_file_created_by">Created by</string>
	<string name="info_map_file_date">Date</string>
	<string name="info_map_file_debug">Debug information</string>
	<string name="info_map_file_debug_no">not included</string>
	<string name="info_map_file_debug_yes">included</string>
	<string name="info_map_file_language_preference">Language preference</string>
	<string name="info_map_file_name">File</string>
	<string name="info_map_file_size">File size</string>
	<string name="info_map_file_start_position">Start position</string>
	<string name="info_map_file_start_zoom_level">Start zoom level</string>
	<string name="info_map_file_version">Version</string>
<!-- 	<string name="latitude">Latitude</string> -->
<!-- 	<string name="longitude">Longitude</string> -->
	<string name="menu_info">Info</string>
	<string name="menu_info_map_file">Map file properties</string>
	<string name="menu_info_about">About this software</string>
	<string name="menu_mapfile">Map file</string>
	<string name="menu_mapgenerator">Map source</string>
	<string name="menu_mapgenerator_blank">blank</string>
	<string name="menu_mapgenerator_database">OSM (offline vector)</string>
	<string name="menu_mapgenerator_mapnik">Mapnik (online)</string>
	<string name="menu_mapgenerator_opencyclemap">OpenCycleMap (online)</string>
	<string name="menu_mapgenerator_opentransportmap">OpenTransportMap (online)</string>
	<string name="menu_mapgenerator_mapquest">Mapquest (online)</string>
	<string name="menu_mapgenerator_mapbox">MapBox (online)</string>
	<string name="menu_mapgenerator_komoot">Komoot (online)</string>
	<string name="menu_mapgenerator_skobbler">Skobbler (online)</string>
	<string name="menu_position">Position</string>
	<string name="menu_position_enter_coordinates">Enter coordinates</string>
	<string name="menu_position_last_known">Last known location</string>
	<string name="menu_position_map_file_center">Map file center</string>
	<string name="menu_position_my_location_enable">Show my location</string>
	<string name="menu_position_my_location_disable">Remove my location</string>
	<string name="menu_preferences">Preferences</string>
	<string name="menu_render_theme">Render theme</string>
	<string name="menu_render_theme_osmarender">Osmarender</string>
	<string name="menu_render_theme_select_file">Select XML file …</string>
	<string name="menu_screenshot">Screenshot</string>
	<string name="menu_screenshot_jpeg">JPEG (lossy)</string>
	<string name="menu_screenshot_png">PNG (lossless)</string>
	<string name="no_location_provider_available">No location source available</string>
<!-- 	<string name="ok">OK</string> -->
	<string name="preferences_debug">Debug settings</string>
	<string name="preferences_general">General settings</string>
	<string name="preferences_cache_persistence">Cache persistence</string>
	<string name="preferences_cache_persistence_desc">Keep cached images on exit</string>
	<string name="preferences_cache_size">External storage</string>
	<string name="preferences_cache_size_desc">Adjust the size of the cache</string>
	<string name="preferences_cache_size_value">%.1f MB</string>
	<string name="preferences_fullscreen">Full screen mode</string>
	<string name="preferences_fullscreen_desc">Hide the status bar</string>
	<string name="preferences_map">Map settings</string>
	<string name="preferences_move_speed">Move speed</string>
	<string name="preferences_move_speed_desc">Adjust the move speed of the map</string>
	<string name="preferences_move_speed_value">%d %% move speed</string>
	<string name="preferences_scale_bar_unit">Scale bar unit</string>
	<string name="preferences_scale_bar_unit_desc">Select the unit for the map scale bar</string>
	<string name="preferences_show_fps_counter">Frame rate</string>
	<string name="preferences_show_fps_counter_desc">Enable frames per second counter</string>
	<string name="preferences_show_scale_bar">Map scale bar</string>
	<string name="preferences_show_scale_bar_desc">Show the scale of the map</string>
	<string name="preferences_show_tile_coordinates">Tile coordinates</string>
	<string name="preferences_show_tile_coordinates_desc">Show coordinates on tiles</string>
	<string name="preferences_show_tile_frames">Tile boundaries</string>
	<string name="preferences_show_tile_frames_desc">Draw tile boundaries</string>
	<string name="preferences_show_water_tiles">Water tiles</string>
	<string name="preferences_show_water_tiles_desc">Highlight tiles which have the water flag set</string>
	<string name="preferences_text_scale">Font size</string>
	<string name="preferences_text_scale_desc">Select the text size of map labels</string>
	<string name="preferences_wake_lock">Stay awake</string>
	<string name="preferences_wake_lock_desc">Stop the screen from dimming</string>
	<string name="snap_to_location_enabled">Snap to position is activated</string>
	<string name="snap_to_location_disabled">Snap to position is disabled</string>
	<string name="unit_symbol_kilometer">&#160;km</string>
	<string name="unit_symbol_meter">&#160;m</string>
	<string name="zoomLevel">Zoom level</string>
	<!-- MapsForge END -->
</resources>
