<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="fill_parent"
	android:layout_width="fill_parent"
	android:background="@drawable/var_custom_screen_bg">

	<LinearLayout
		android:id="@+id/linear_layout_skyplot"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_above="@+id/linear_layout_bottom"
		android:gravity="center">
	</LinearLayout>
	
	<LinearLayout 
		android:id="@+id/linear_layout_top_coordinates"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" 
		android:padding="3dip">
		<TextView
			style="@style/CustomScreenTextValue"
			android:id="@+id/text_view_latitude"
			android:layout_width="wrap_content"
			android:gravity="left" />
		<View 
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:layout_weight="1" />
		<TextView
			style="@style/CustomScreenTextValue"
			android:id="@+id/text_view_longitude"
			android:layout_width="wrap_content"
			android:gravity="right" />
	</LinearLayout>
	
	<LinearLayout 
		android:layout_below="@+id/linear_layout_top_coordinates"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:paddingLeft="3dip"
		android:paddingRight="3dip" >
		<TextView
			style="@style/CustomScreenTextTitle"
			android:layout_width="wrap_content"
			android:gravity="left"
			android:text="@string/latitude" />
		<View 
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:layout_weight="1" />
		<TextView
			style="@style/CustomScreenTextTitle"
			android:layout_width="wrap_content"
			android:gravity="right"
			android:text="@string/longitude" />
	</LinearLayout>
	
	<LinearLayout 
		android:id="@+id/linear_layout_bottom"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_above="@+id/linear_layout_bottom_2">
		<LinearLayout style="@style/CustomScreenBottomInfo">
			<TextView
				style="@style/CustomScreenTextTitle"
				android:text="@string/altitude"/>
			<TextView
				style="@style/CustomScreenTextValue"
				android:id="@+id/text_view_altitude" />
		</LinearLayout>
		<LinearLayout style="@style/CustomScreenBottomInfo">
			<TextView
				style="@style/CustomScreenTextTitle"
				android:text="@string/speed"/>
			<TextView
				style="@style/CustomScreenTextValue"
				android:id="@+id/text_view_speed" />
		</LinearLayout>
		<LinearLayout style="@style/CustomScreenBottomInfo">
			<TextView
				style="@style/CustomScreenTextTitle"
				android:text="@string/accuracy" />
			<TextView
				style="@style/CustomScreenTextValue"
				android:id="@+id/text_view_accuracy" />
		</LinearLayout>
	</LinearLayout>
	
	<LinearLayout 
		android:id="@+id/linear_layout_bottom_2"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_above="@+id/linear_layout_bottom_3" >
		<LinearLayout style="@style/CustomScreenBottomInfo">
			<TextView
				style="@style/CustomScreenTextTitle"
				android:text="@string/satellites"/>
			<TextView
				style="@style/CustomScreenTextValue"
				android:id="@+id/text_view_satellites" />
		</LinearLayout>
		<LinearLayout style="@style/CustomScreenBottomInfo">
			<TextView
				style="@style/CustomScreenTextTitle"
				android:text="@string/declination"/>
			<TextView
				style="@style/CustomScreenTextValue"
				android:id="@+id/text_view_declination" />
		</LinearLayout>
		<LinearLayout style="@style/CustomScreenBottomInfo">
			<TextView
				style="@style/CustomScreenTextTitle"
				android:text="@string/gps_fix"/>
			<TextView
				style="@style/CustomScreenTextValue"
				android:id="@+id/text_view_time_gps" />
		</LinearLayout>
	</LinearLayout>
	
	<LinearLayout
		android:id="@+id/linear_layout_bottom_3"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:background="@drawable/var_panel_bottom"
		android:padding="3dip">
		<ToggleButton
			android:id="@+id/btn_gps_on_off"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:textOn="@string/gps_on"
			android:textOff="@string/gps_off"/>
		<ToggleButton
			android:id="@+id/btn_compass_on_off"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1" 
			android:textOn="@string/compass"
			android:textOff="@string/compass"/>
	</LinearLayout>
</RelativeLayout>
