<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

	<LinearLayout style="@style/PanelTopMain">
		<ImageButton
			android:id="@+id/button_logo"
			style="@style/PanelButton"
            android:src="@drawable/ic_title_logo" />
            
        <ImageView style="@style/SeparatorVertical" />
		<TextView style="@style/TitleText" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="6dip"
        android:background="@android:color/white">
        <LinearLayout style="@style/MainScreenLine">
            <Button style="@style/MainScreenButton"
                android:id="@+id/button_start"
                android:text="@string/start"
                android:drawableTop="@drawable/ic_main_start"/>
            <Button style="@style/MainScreenButton"
                android:id="@+id/button_map"
                android:text="@string/map"
                android:drawableTop="@drawable/ic_main_map"/>
        </LinearLayout>

        <LinearLayout style="@style/MainScreenLine">
            <Button style="@style/MainScreenButton"
                android:id="@+id/button_gps"
                android:text="@string/gps"
                android:drawableTop="@drawable/ic_main_gps"/>
            <Button style="@style/MainScreenButton"
                android:id="@+id/button_settings"
                android:text="@string/settings"
                android:drawableTop="@drawable/ic_main_settings"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
